--- a/product/product.css
+++ b/product/product.css
@@ -1,5 +1,82 @@
 main {
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 
+    .card {
+
+        width: 300px;
+        background-color: white;
+        border-radius: 4px;
+        box-shadow: 1px 1px 14px -1px black;
+        min-height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        transition: 1s transform;
+
+        .card-img {
+
+            height: 20%;
+
+            img {
+
+                width: 100%;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+
+            }
+
+        }
+
+        .card-body {
+
+            text-align: center;
+            margin: 10px;
+
+            h1 {
+
+                font-size: 30px;
+
+                span {
+
+                    font-size: 20px;
+
+                }
+
+            }
+
+        }
+
+        .card-footer {
+
+            text-align: center;
+            padding: 3%;
+    
+            button {
+
+                padding: 10px 40px;
+                border: none;
+                box-shadow: 1px 1px 10px -4px black;
+                background-color: yellow;
+                color: black;
+                border-radius: 5px;
+
+            }
+            
+        }
+
+    }
+
+    .card:hover {
+
+        transform: scale(1.03);
+        cursor: pointer;
+
+    }
 
 }
